--- a/task01/index.html
+++ b/task01/index.html
@@ -115,8 +115,8 @@
 				<li>排名3</li>
 				
 			</ol>
-			<caption>下面是一个表格，给表格加了一个border="1"好让你看出是一个表格</caption>
 			<table border="1">
+			    <caption>下面是一个表格，给表格加了一个border="1"好让你看出是一个表格</caption>
 	                    <thead>
 	                        <tr>
 	                            <th>表头</th>
@@ -159,11 +159,11 @@
 						<nav>
 							<ul>
 								<li>
-									<label>请输入邮箱地址：</label><input type="email" name="name" placeholder="这是一个文本输入框">
+									<label for="mail">请输入邮箱地址：</label><input type="email" id="mail" name="name" placeholder="这是一个文本输入框">
 									<p>邮箱地址请按照要求格式输入</p>
 								</li>
 								<li>
-									<label>请输入密码：</label><input type="password" name="name" placeholder="这是一个文本输入框"><label>请重复输入密码：</label><input type="password" name="name" placeholder="这是一个文本输入框">
+									<label for="pwd">请输入密码：</label><input type="password" id="pwd" name="name" placeholder="这是一个文本输入框"><label>请重复输入密码：</label><input type="password" name="name" placeholder="这是一个文本输入框">
 									<p>密码为6-16位英文数字</p>
 								</li>
 								<li>
