--- a/task01/index.html
+++ b/task01/index.html
@@ -169,7 +169,8 @@
 								<li>
 									<span>
 										<label>性别</label>
-										<input type="radio" value="女" name="qqqq" checked="checked">女<input type="radio" value="男" name="qqqq">男
+										<label for="female"><input type="radio" value="女" id="female" name="sex" checked="checked">女</label>
+										<label for="male"><input type="radio" value="男" id="male" name="sex">男</label>
 									</span>
 									<span>
 										<label>城市</label>
@@ -177,7 +178,9 @@
 									</span>
 									<span>
 										<label>爱好</label>
-										<input type="checkbox" name="">运动<input type="checkbox" name="">运动<input type="checkbox" name="">运动
+										<label for="sport"><input type="checkbox" id="sport" name="">运动</label>
+										<label for="art"><input type="checkbox" name="" id="art">艺术</label>
+										<label for="science"><input type="checkbox" name="" id="science">科学</label>
 									</span>
 									<span>
 										<label>个人描述</label>
